PROJEKT/antlr_zaloha/antlr_2/project.g4
grammar project;

program: statement* EOF;

statement: emptyCommand=';'
         | variableDeclaration
         | writeCommand
         | assignment
         | readCommand
         | conditionWithoutBrackets
         | condition
         | loop
         | forLoop
         | expression ';'
         | whileLoop
         | block
         ;
block: '{' statement* '}';
whileLoop: '[' statement* ']';

expression:
    expression '-' expression                                       #sub
    | expression '+' expression                                     #add
    |INT                                                            #int
    | FLOAT                                                         #float
    | BOOLEAN                                                       #boolean
    | '!' expression                                                #not
    | '-' expression                                                #negative_unary
    | STRING_LITERAL                                                #string_literal
    | ID                                                            #id
    | expression ('*' | '/' | '%') expression                       #mul
    | expression ('&&') expression                                  #and
    | expression ('||') expression                                  #or
    | expression ('.') expression                                   #concat
    | expression ('==' | '!=' | '<' | '<=' | '>' | '>=') expression #comparisonExpression
    | '(' expression ')'                                            #parenthesis
    ;

writeCommand: 'write' expression (',' expression)* ';';
readCommand: 'read' ID (',' ID)* ';';

//assignment: ID (ASSIGN expression)* ';';
assignment : ID ('=' ID)* '=' expression ;
//assignment: (ID ASSIGN)+ expression ';';


condition: 'if' '(' expression ')' '{' statement* '}' ('else' statement)?;
conditionWithoutBrackets: 'if' '(' expression ')' statement ('else' statement)?;

loop: 'while' '(' expression ')' '{' statement* '}';

//forLoop: 'for' '(' assignment ';' expression ';' expression ')'  '{'statement*'}';
forLoop: 'for' '(' assignment ';' expression ';' assignment ')' '{' statement* '}';
variableDeclaration: TYPE_IDENTIFIER ID ((',' ID)+)? (ASSIGN expression)? ';';


TYPE_IDENTIFIER: ('int' | 'float' | 'bool' | 'string');

INT: ([0-9]+);

FLOAT: [0-9]+ '.'[0-9]+;

BOOLEAN: ('true' | 'false');

STRING_LITERAL: '"' .*? '"';

ID: [a-zA-Z][a-zA-Z0-9]*;

COMMENT: '//' ~[\r\n]* -> skip;

ASSIGN: '=';

WS: [ \t\r\n]+ -> skip;
